# folioblocks

./: .dockerignore  .gitignore  .gitmodules  .markdownlint.json  Dockerfile  Dockerfile-node  LICENSE  README.md  deploy-aci.yaml  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  deploy-web.yml  sonar-scan.yml
css/: 100.1c73e40f.css  106.31f2f561.css  109.35d8e9c1.css  120.9d0c8f74.css  135.5dbb0fda.css  156.90fa208b.css  161.5c47b532.css  168.ec6bb93c.css  17.a9197df2.css  175.d87249f0.css  177.edf7c6dc.css  183.e38e4a59.css  183.ee874f9c.css  195.47c11fe4.css  203.331d722a.css  209.8c21e079.css  210.8b24f685.css  218.db01897d.css  224.a6e80622.css  226.4d80903b.css  238.5d328e47.css  241.7e5736a0.css  252.70aabe69.css  271.5da908ab.css  274.c7d374da.css  278.e77a807d.css  279.ff735d59.css  280.59304580.css  287.2a7c22f2.css  291.2a5f82a4.css  295.c0a3a4db.css  296.6a2c20e2.css  301.8ef186cf.css  308.8da28c1b.css  312.6f8e39de.css  313.72768c40.css  324.c6a1c39c.css  33.dccb93d5.css  333.19bbb2a8.css  347.3035b3fa.css  (+96 more)
experiments/: fastapi_aiosqlite.py  file_data_storage_protect.py
folioblock/: README.md  package.json
js/: 100.268a7710.js  100.7aa300a2.js  100.f1e19745.js  106.1ba5cb5f.js  106.20080dc8.js  106.b087ba73.js  109.4dc2693d.js  109.774a6390.js  120.1296cb55.js  120.38658d70.js  135.d7a9f2c7.js  156.af2fd65d.js  156.dd34a8c6.js  156.e42a2db7.js  161.6b38b3d8.js  161.6dd22b98.js  161.ae417a5e.js  168.11160c0a.js  17.e522f2fd.js  175.530148f7.js  177.844be637.js  177.fc6ef07a.js  183.36ee15ab.js  183.e35794f1.js  195.52721dca.js  203.54183414.js  203.e7fbe00f.js  209.268a8f52.js  209.982c45d3.js  210.11b5d552.js  210.4fcf4e5f.js  218.1288084c.js  224.b6f95f1e.js  226.a8fe808e.js  238.0d3fbc63.js  238.b542e4e2.js  241.431d5f06.js  252.95f123bd.js  271.9c25874c.js  274.73a1c3bd.js  (+227 more)
node/: events.py  main.py  manage.py  proto_hash_validator.py  proto_tester_singleton_acc_scneario.py  proto_totp.py
node/api/: admin.py  dashboard.py  entity.py  explorer.py  node.py
node/apis/: dashboard.py  explorer.py  node.py
node/blueprint/: models.py  schemas.jsonc  schemas.py
node/core/: args.py  blockchain.py  consensus.py  constants.py  decorators.py  dependencies.py  email.py  events.py  logger.py  models.py  tasks.py
node/database/: callbacks.py  core.py  database.py  models.py  schemas.py
node/node/: asgi.py  settings.py  urls.py  wsgi.py
node/stubs/: args.pyi  constants.pyi  dashboard.pyi  database.pyi  events.pyi  explorer.pyi  logger.pyi  main.pyi  models.pyi  node.pyi
node/utils/: args.py  constants.py  conversion.py  database.py  decorators.py  email.py  exceptions.py  files.py  http.py  logger.py  node.py  (+2 more)
samples/: async_sqlorm.py  blockchain.json  blockchain_encrypted.json  encrypt_db.py  fastapi_practice.py  file_data_storage_protect.py  mechanism_aes_sha256_unlock_lock.py
web/: .gitignore  README.md  package-lock.json  package.json  quasar.conf.js  tsconfig.json
(+46 files in other folders)
