[tool.poetry]
name = "folioblocks"
version = "0.1.0"
description = "The Main Repository for the Design of a Credential Verification System using Blockchain Technology. Contains submodules that divides the ecosystem and development of the blockchain system and the web application."
authors = ["Janrey Licas <self.codexlink@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
