[tool.poetry]
name = "folioblocks"
version = "0.1.0"
description = "The Main Repository for the Design of a Credential Verification System using Blockchain Technology. Contains submodules that divides the ecosystem and development of the blockchain system and the web application."
authors = ["Janrey Licas <self.codexlink@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
fastapi-utils = "^0.2.1"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.9.0"}
fastapi-mail = "^1.0.4"
cryptography = "^36.0.1"
databases = {extras = ["aiosqlite"], version = "^0.5.5"}
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "/node/stubs"
exclude="^[a-z].+pyi$"
python_version = "3.10"
platform = "win32"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
check_untyped_defs = "True"
disallow_untyped_decorators = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
warn_unreachable = "True"
show_column_numbers = "True"
pretty = "True"
show_traceback = "True"
plugins = "sqlmypy"